--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,8 @@
 body {
   color: rgb(252, 251, 250);
   font-family: "PT Sans", sans-serif;
-  background-image: linear-gradient(black, rgb(10,40,40));
+  /* background-image: linear-gradient(black, rgb(10,40,40)); */
+  background-color: #181d31;
 
 }
 
